[add] added new methods for testing